<resources>
    <string name="app_name">Курсовая</string>
    <string name="choose_quiz">Выберите\nкатегорию</string>
    <string name="start_quiz">Начать тест</string>
    <string name="math">Математика</string>
    <string name="history">История</string>
    <string name="informatics">Информатика</string>
    <string name="pe">Физкультура</string>
    <string name="next_question">Следующий вопрос</string>
    <string name="start_new_question">Начать новый тест</string>
    <string name="result">Ваш результат:</string>
    <string name="title_activity_login">VitQuiz</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="app_in_name">Приложение для тестирования</string>
    <string name="app_name_after">Регистрация</string>
    <string name="text_bottom">Войдите в свою учетную запись</string>
    <string name="btn_sign_in">Войти</string>
    <string name="btn_sregidt">Зарегистрироваться</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_sign_up">SignUpActivity</string>

    <string name="program_description">
        VitQuiz - это увлекательное образовательное приложение, предназначенное для проверки и улучшения знаний в различных областях.
        \nНаше приложение предлагает пользователям широкий спектр вопросов по математике, информатике, физкультуре и истории.
        \nС VitQuiz вы можете легко и весело готовиться к экзаменам или просто поддерживать свои знания в форме.
    </string>

    <string name="user_instruction">
        1. Регистрация и вход:\n
        Зарегистрируйтесь или войдите в систему, используя адрес электронной почты и пароль.\n
\n
        2. Выбор категории:\n
        На главном экране выберите категорию викторины (Математика, Информатика, Физкультура, История).\n
        \n
        3. Начало теста:\n
        Нажмите "Начать тест" после выбора категории.\n
        Ответьте на все вопросы и получите свой результат.\n
        \n
        4. Добавление вопросов:\n
        Пользователи с разрешением могут добавлять вопросы через профиль.\n
        \n
        5. Профиль:\n
        Просмотрите своё имя и адрес электронной почты в разделе профиля.\n
        Нажмите "Выйти" для выхода из аккаунта.\n
        \n\n
        Спасибо, что выбрали VitQuiz!
    </string>
</resources>