<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:id="@+id/main"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <ImageView
        android:id="@+id/Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="120dp"
        android:adjustViewBounds="true"
        android:src="@drawable/icon1" />

    <ImageView
        android:id="@+id/Prof"
        android:layout_width="52dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="310dp"
        android:layout_marginTop="40dp"
        android:adjustViewBounds="true"
        android:src="@drawable/profile" />

    <ImageView
        android:id="@+id/Info"
        android:layout_width="52dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:adjustViewBounds="true"
        android:importantForAccessibility="no"
        android:src="@drawable/icon_info" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/Inform"/>

    <TextView
        android:id="@+id/Choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Icon"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/choose_quiz"
        android:textColor="#00FFFF"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Choose"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/MathLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/round_back_white10"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:src="@drawable/math_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/math"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/HisLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="25dp"
            android:layout_weight="1"
            android:background="@drawable/round_back_white10"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:src="@drawable/history_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/history"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/InfLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/round_back_white10"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:src="@drawable/it_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:text="@string/informatics"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/SportLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="25dp"
            android:layout_weight="1"
            android:background="@drawable/round_back_white10"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:src="@drawable/sport_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/pe"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startQuizBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line2"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_green20"
        android:text="@string/start_quiz"
        android:textSize="17sp"
        android:textStyle="bold" />

</RelativeLayout>